--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^15.4.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "recharts": "^3.1.2",
     "sharp": "^0.34.3",
     "tailwindcss": "^3.4.17",
     "three": "^0.179.1"
