--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "aframe": "^1.4.0",
     "chart.js": "^4.5.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
+    "meshoptimizer": "^0.24.0",
     "next": "^15.4.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "recharts": "^3.1.2",
     "sharp": "^0.34.3",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "three-stdlib": "^2.36.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.4.6",
